--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "version": "vinxi version"
   },
   "dependencies": {
+    "@gcforms/core": "^1.0.0",
+    "@gcforms/types": "^1.0.16",
     "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.15.0",
     "@solidjs/start": "^1.1.0",
