--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@solidjs/router": "^0.15.0",
     "@solidjs/start": "^1.1.0",
     "install": "^0.13.0",
+    "marked": "^16.1.2",
     "npm": "^11.5.2",
     "solid-js": "^1.9.5",
     "vinxi": "^0.5.7"
